--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,14 +9,17 @@
 }
 .p-float-label{
   background-color: #176B87;
+
+}
+
+input{
+  width: 100%;
 }
 
 .button-style{
   margin-top: 25px;
   display: block;
-
 }
-
 .button-style .button{
   color:white;
   background: #176B87;
