--- a/src/app/pages/components/footer/footer.component.scss
+++ b/src/app/pages/components/footer/footer.component.scss
@@ -1,5 +1,6 @@
 .footer {
-  background-color: #000;
-  color: #fff;
+  background-color: transparent;
+  color: #000;
   padding: 10px 0;
+  margin: 10px;
 }
