--- a/src/app/pages/components/main/login/login.component.scss
+++ b/src/app/pages/components/main/login/login.component.scss
@@ -11,3 +11,30 @@ a{
   color: #176B87;
 
 }
+.container{
+  width: 100%;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  padding: 15px;
+  display: flex;
+  background:transparent;
+}
+
+.container form{
+  display: flex;
+  flex-direction: column;
+  width: 390px;
+  height: 420px;
+  background-color: transparent;
+  margin: 15px;
+  position: absolute;
+  justify-content: center;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(15px);
+
+}
