--- a/src/app/pages/components/main/main.component.scss
+++ b/src/app/pages/components/main/main.component.scss
@@ -3,19 +3,23 @@
 a{
   width: 150px;
   margin: 10px;
-  color: #176B87;
+  color: #000;
   text-decoration: none;
   font-size: 14px;
   cursor: pointer;
 }
 
+h2{
+  color: #fff;
+}
+
 h3{
-  color: #176B87;
+  color: #000;
 }
 
 p{
   font-size: 12px;
-  color: #176B87;
+  color: #000;
 }
 
 .card{
@@ -23,8 +27,12 @@ p{
   border-radius: 10px;
   padding: 50px 100px 70px 100px;
 
+
 }
-.container{
+.flex{
+  background: transparent;
+}
+.flex .container{
  padding:20px;
  border-radius: 10px;
 
