--- a/src/app/pages/components/footer/footer.component.scss
+++ b/src/app/pages/components/footer/footer.component.scss
@@ -1,6 +1,9 @@
 .footer {
   background-color: transparent;
   color: #000;
-  padding: 10px 0;
+  padding: 10px ;
   margin: 10px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
