--- a/src/app/pages/components/main/login/login.component.scss
+++ b/src/app/pages/components/main/login/login.component.scss
@@ -1,17 +1,15 @@
-
-.p-component{
+.p-component {
   justify-content: center;
 }
 .error-border {
   border: 1px solid red;
 }
 
-a{
+a {
   text-decoration: none;
-  color: #176B87;
-
+  color: #000;
 }
-.container{
+.container {
   width: 100%;
   min-height: 100vh;
   justify-content: center;
@@ -19,22 +17,44 @@ a{
   align-content: center;
   padding: 15px;
   display: flex;
-  background:transparent;
+  background: transparent;
 }
 
-.container form{
+.container form {
   display: flex;
   flex-direction: column;
   width: 390px;
   height: 420px;
-  background-color: transparent;
+  background-color: #00000113;
   margin: 15px;
-  position: absolute;
   justify-content: center;
   border: 2px solid rgba(255, 255, 255, 0.5);
+  border-color: #000;
   border-radius: 20px;
+  align-items: center;
+}
+
+.remember-forget {
+  margin: 0 15px;
+  font-size: 15px;
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  backdrop-filter: blur(15px);
+}
+.remember-forget label {
+  margin-right: 10px;
+  color: #000;
+  font-size: 15px;
+  cursor: pointer;
+}
 
+.remember-forget a {
+  text-decoration: underline;
+}
+.remember-forget a:hover {
+  color: #176b87;
+}
+.register-span p {
+  margin: 10px;
 }
