--- a/src/app/pages/components/main/main.component.html
+++ b/src/app/pages/components/main/main.component.html
@@ -25,7 +25,7 @@
   <div
     class="flex align-items-center font-bold text-center p-5 border-round justify-content-center align-self-center w-14"
   >
-    <div class="container ">
+    <div class="container-social ">
       <div class="header-social">
         <h3>{{ "startForm.headerSocial" | transloco }}</h3>
       </div>
