--- a/src/app/pages/components/main/login/login.component.html
+++ b/src/app/pages/components/main/login/login.component.html
@@ -7,6 +7,7 @@
       <h2>Orion Innovation</h2>
     </div>
     <span class="p-float-label mt-4">
+      <i class="pi pi-user" style="color: #000;"></i>
       <input
         pInputText
         id="username"
@@ -38,6 +39,7 @@
       }}
     </small>
     <span class="p-float-label mt-4">
+      <i class="pi pi-lock" style="color: #000;"></i>
       <p-password
         id="password"
         formControlName="password"
