--- a/src/app/pages/components/main/main.component.html
+++ b/src/app/pages/components/main/main.component.html
@@ -9,7 +9,10 @@
   <div
     class="flex align-items-center font-bold text-center p-2 border-round justify-content-center align-self-center mb-3"
   >
-    <div class="card">
+    <div class="card flex flex-column">
+      <div class=" flex w-full ">
+        <h2>Orion Innovation</h2>
+      </div>
       <div>
        <span class="button-style">
         <button class="button" style="background-color: black; color: #fff;" routerLink="/login"> Giriş yap</button>
