--- a/src/app/pages/components/main/login/login.component.scss
+++ b/src/app/pages/components/main/login/login.component.scss
@@ -23,10 +23,10 @@ a {
 .container form {
   display: flex;
   flex-direction: column;
-  width: 390px;
-  height: 420px;
+  width: 600px;
   background-color: #00000113;
   margin: 15px;
+  padding: 50px;
   justify-content: center;
   border: 2px solid rgba(255, 255, 255, 0.5);
   border-color: #000;
