--- a/src/app/pages/components/main/main.component.html
+++ b/src/app/pages/components/main/main.component.html
@@ -1,66 +1,43 @@
 <div
   class="container align-items-center justify-content-start align-content-center text-center"
 >
-  <div
-    class="block  align-items-center text-center p-4 border-round mb-3"
-  >
-
+  <div class="block align-items-center text-center p-4 border-round mb-3">
+    <h1 style="font-family: cursive;">
+      <a routerLink="/product" style="font-size: 70px; font-family: cursive"
+        >Orion Innovation</a
+      >
+      ile e-ticaretinizi bir sanat eserine dönüştürün; her tık, bir başyapıtın
+      doğuşu olsun
+    </h1>
   </div>
   <div
     class="flex align-items-center font-bold text-center p-2 border-round justify-content-center align-self-center mb-3"
   >
     <div class="card flex flex-column">
-      <div class=" flex w-full ">
+      <div class="flex w-full">
         <h2>Orion Innovation</h2>
       </div>
       <div>
-       <span class="button-style">
-        <button class="button" style="background-color: black; color: #fff;" routerLink="/login"> Giriş yap</button>
-       </span>
-      </div>
-      <div>
-        <span class="button-style" >
-         <button class="button" style="background-color: black; color: #fff;" routerLink="/register"> Kayıt ol</button>
+        <span class="button-style">
+          <button
+            class="button"
+            style="background-color: black; color: #fff"
+            routerLink="/login"
+          >
+            Giriş yap
+          </button>
         </span>
       </div>
-    </div>
-  </div>
-  <div
-    class="flex align-items-center font-bold text-center p-5 border-round justify-content-center align-self-center w-14"
-  >
-    <div class="container-social ">
-      <div class="header-social">
-        <h3>{{ "startForm.headerSocial" | transloco }}</h3>
-      </div>
-      <div class="description-social">
-        <p>{{ "startForm.descSocialOne" | transloco }}</p>
-        <p>{{ "startForm.descSocialTwo" | transloco }}</p>
-      </div>
-      <div class="icon-social flex">
-        <a href="#">
-          <div
-            class="flex-1 font-bold text-center p-4 border-round border-1 border-400"
+      <div>
+        <span class="button-style">
+          <button
+            class="button"
+            style="background-color: black; color: #fff"
+            routerLink="/register"
           >
-            <i class="pi pi-google"></i>
-            <p>{{ "startForm.piGoogle" | transloco }}</p>
-          </div>
-        </a>
-        <a href="#">
-          <div
-            class="flex-1 font-bold text-center p-4 border-round border-1 border-400"
-          >
-            <i class="pi pi-apple"></i>
-            <p>{{ "startForm.piApple" | transloco }}</p>
-          </div>
-        </a>
-        <a href="#">
-          <div
-            class="flex-1 font-bold text-center p-4 border-round border-1 border-400"
-          >
-            <i class="pi pi-facebook"></i>
-            <p>{{ "startForm.piFacebook" | transloco }}</p>
-          </div>
-        </a>
+            Kayıt ol
+          </button>
+        </span>
       </div>
     </div>
   </div>
