--- a/src/app/pages/components/main/register/register.component.scss
+++ b/src/app/pages/components/main/register/register.component.scss
@@ -31,7 +31,13 @@
 .container form .wrapper{
   margin: 15px;
 }
+a {
+  text-decoration: underline;
+  color: #000;
+}
 
-
+a:hover{
+  color:#176b87;
+}
 
 
