--- a/src/app/pages/components/main/resetpassword/resetpassword.component.html
+++ b/src/app/pages/components/main/resetpassword/resetpassword.component.html
@@ -1,26 +1,53 @@
-<form [formGroup]="userResetForm">
-  <span class="p-float-label mt-4 " >
-    <input pInputText id="email" formControlName="email" pTooltip="{{'resetForm.emailTooltip' | transloco}}"  />
-    <label htmlFor="email">{{'resetForm.emailLabel' | transloco}}</label>
-  </span>
-  <small
- *ngIf="
- userResetForm.get('email')
-         ?.invalid &&
-         userResetForm.get('email')?.touched"
+<div class="container">
+  <form [formGroup]="userResetForm">
+    <div
+      class="block justify-content-center align-content-center text-2xl"
+      style="background: transparent"
+    >
+      <h2>Orion Innovation</h2>
+    </div>
+    <span class="p-float-label mt-4">
+      <input
+        pInputText
+        id="email"
+        formControlName="email"
+        pTooltip="{{ 'resetForm.emailTooltip' | transloco }}"
+      />
+      <label htmlFor="email">{{ "resetForm.emailLabel" | transloco }}</label>
+    </span>
+    <small
+      *ngIf="
+        userResetForm.get('email')?.invalid &&
+        userResetForm.get('email')?.touched
+      "
+      class="text-red-500"
+    >
+      {{
+        userResetForm.get("email").errors != null &&
+        userResetForm.get("email").errors["whitespace"]
+          ? ("resetForm.emailSmall" | transloco)
+          : ""
+      }}
 
- class="text-red-500"
->
-{{ userResetForm.get('email').errors != null && userResetForm.get('email').errors['required'] ? ('resetForm.emailSmall' | transloco) : '' }}
-
- {{ userResetForm.get('email').errors != null && userResetForm.get('email').errors['required'] ? ('resetForm.emailSmall' | transloco) : '' }}
-</small>
-  <span class="button-style">
-    <button class="button w-12rem"
-    >{{'resetForm.buttonLabelNew' | transloco}}</button>
-  </span>
- <span class="button-style">
-  <button class="button w-12rem custom-button"
-  >{{'resetForm.buttonLabelBack' | transloco}}</button>
- </span>
-</form>
+      {{
+        userResetForm.get("email").errors != null &&
+        userResetForm.get("email").errors["required"]
+          ? ("resetForm.emailSmall" | transloco)
+          : ""
+      }}
+    </small>
+    <span class="button-style">
+      <button class="button w-12rem">
+        {{ "resetForm.buttonLabelNew" | transloco }}
+      </button>
+    </span>
+    <span class="button-style">
+      <button
+        class="button w-12rem custom-button"
+        routerLink="/login"
+      >
+        {{ "resetForm.buttonLabelBack" | transloco }}
+      </button>
+    </span>
+  </form>
+</div>
