--- a/src/app/pages/components/main/login/login.component.html
+++ b/src/app/pages/components/main/login/login.component.html
@@ -105,3 +105,42 @@
     </span>
   </form>
 </div>
+<div
+    class="flex align-items-center font-bold text-center py-6 border-round  justify-content-center align-self-center w-14"
+  >
+    <div class="container-social ">
+      <div class="header-social">
+        <h3>{{ "startForm.headerSocial" | transloco }}</h3>
+      </div>
+      <div class="description-social">
+        <p>{{ "startForm.descSocialOne" | transloco }}</p>
+        <p>{{ "startForm.descSocialTwo" | transloco }}</p>
+      </div>
+      <div class="icon-social flex">
+        <a href="#">
+          <div
+            class="flex-1 font-bold text-center p-4 "
+          >
+            <i class="pi pi-google"></i>
+            <p>{{ "startForm.piGoogle" | transloco }}</p>
+          </div>
+        </a>
+        <a href="#">
+          <div
+            class="flex-1 font-bold text-center p-4 "
+          >
+            <i class="pi pi-apple"></i>
+            <p>{{ "startForm.piApple" | transloco }}</p>
+          </div>
+        </a>
+        <a href="#">
+          <div
+            class="flex-1 font-bold text-center p-4 "
+          >
+            <i class="pi pi-facebook"></i>
+            <p>{{ "startForm.piFacebook" | transloco }}</p>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
