--- a/src/app/pages/components/main/login/login.component.html
+++ b/src/app/pages/components/main/login/login.component.html
@@ -84,11 +84,11 @@
             />
           </div>
           <div>
-            <label for="remember"> Remember me</label>
+            <label for="remember"> Beni hatırla</label>
           </div>
         </div>
         <div>
-          <a routerLink="/reset-password">Forgot Password?</a>
+          <a routerLink="/reset-password">Parolanızı mı unuttunuz?</a>
         </div>
       </div>
     </span>
@@ -100,8 +100,8 @@
     <span
       class="register-span flex flex-row mt-2 justify-content-between align-content-center align-items-center"
     >
-      <p>Don't have an account?</p>
-      <a routerLink="/register">Create now!</a>
+      <p>Hesabınız yok mu?</p>
+      <a routerLink="/register">Şimdi oluştur!</a>
     </span>
   </form>
 </div>
@@ -117,7 +117,7 @@
         <p>{{ "startForm.descSocialTwo" | transloco }}</p>
       </div>
       <div class="icon-social flex">
-        <a href="#">
+        <a href="/login">
           <div
             class="flex-1 font-bold text-center p-4 "
           >
@@ -125,7 +125,7 @@
             <p>{{ "startForm.piGoogle" | transloco }}</p>
           </div>
         </a>
-        <a href="#">
+        <a href="/login">
           <div
             class="flex-1 font-bold text-center p-4 "
           >
@@ -133,7 +133,7 @@
             <p>{{ "startForm.piApple" | transloco }}</p>
           </div>
         </a>
-        <a href="#">
+        <a href="/login">
           <div
             class="flex-1 font-bold text-center p-4 "
           >
